force-app/main/default/objects/DC_Tenant_Suite__c/DC_Tenant_Suite__c.object-meta.xml
<CustomObject>
    <label>Tenant Suite</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenant Suites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>