force-app/main/default/objects/DC_Tenant_Suite__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account occupying the Tenant Suite.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tenant Suites</relationshipLabel>
    <relationshipName>Tenant_Suites</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>