force-app/main/default/objects/DC_Tenant_Suite__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The floor that this Tenant Suite is located on.</description>
    <label>Floor</label>
    <referenceTo>DC_Floor__c</referenceTo>
    <relationshipLabel>Tenant Suites</relationshipLabel>
    <relationshipName>Tenant_Suites</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>