force-app/main/default/objects/DC_Tenant_Suite__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>Four character short name of the Tenant Suite used to support naming convention.</description>
    <label>Short Name</label>
    <length>4</length>
    <type>Text</type>
</CustomField>