force-app/main/default/objects/DC_Tenant_Suite__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <description>Square footage of the suite</description>
    <label>Square Footage</label>
    <precision>6</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>