force-app/main/default/objects/DC_Tenant_Suite__c/fields/Suite_Use__c.field-meta.xml
<CustomField>
    <fullName>Suite_Use__c</fullName>
    <description>Description of the usage type of this Tenant Suite</description>
    <label>Suite Use</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Powered Shell</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Unaccounted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>