force-app/main/default/objects/DC_Tenant_Suite__c/fields/Tenant_Suite_Description__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Suite_Description__c</fullName>
    <description>Description of the space</description>
    <label>Tenant Suite Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>