force-app/main/default/objects/DC_Tenant_Suite__c/fields/Tenant_Suite_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Suite_Name__c</fullName>
    <formula>Floor__r.Name + &quot;.&quot; + Short_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Suite Name</label>
    <type>Text</type>
</CustomField>